<resources>
    <string name="app_name">FullChamba-B</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_manage_user">Gestión de Usuario</string>
    <string name="menu_manage_activities">Gestión de Actividades</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string-array name="combo_usuarios">
        <item>Seleccione:</item>
        <item>Walter Perez</item>
        <item>Juan Diaz</item>
    </string-array>

    <string-array name="cargos">
        <item>Programador</item>
        <item>Analista</item>
        <item>Gestor de documentos</item>
    </string-array>

</resources>